Fix buttons on mobile, add better code font

--- a/assets/css/dbg-style-custom.css
+++ b/assets/css/dbg-style-custom.css
@@ -4,6 +4,7 @@
 
 @media (max-width: 768px) {
     a.button.dark {
+        margin-top: 5px;
         display: inline-block;
         line-height: 1.5em;
     }
