--- a/assets/css/style-custom.css
+++ b/assets/css/style-custom.css
@@ -1574,11 +1574,11 @@ article:hover .overlay {
 }
 .single pre{ padding: 17px 20px; margin-bottom: 35px; }
 .single code {
-    font-family: Lato, sans-serif!important;
+    font-family: Inconsolata, monospace;
     font-size: 16px;
     color: #676767;
     letter-spacing: .5px;
-    font-weight: 300;
+    font-weight: 400;
     margin: 20px 0 35px;
 }
 .single hr{ width: 60%; }
